# api/openapi.yaml
@@ -317,6 +317,22 @@ definitions:
       password:
         type: string
     type: object
+  handler.manageUserRequest:
+    properties:
+      access_blocked:
+        type: boolean
+      role:
+        $ref: '#/definitions/domain.UserRole'
+    type: object
+  handler.profileRequest:
+    properties:
+      display_name:
+        type: string
+      email:
+        type: string
+      email_notifications_enabled:
+        type: boolean
+    type: object
   handler.sessionResponse:
     properties:
       access_token:
@@ -337,6 +353,8 @@ definitions:
         type: string
       email:
         type: string
+      email_notifications_enabled:
+        type: boolean
       id:
         type: string
       role:
@@ -903,6 +921,103 @@ paths:
       summary: Create tag
       tags:
       - taxonomy
+  /billpiggy/api/v1/users/:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/handler.userResponseBody'
+            type: array
+      summary: List users
+      tags:
+      - administration
+  /billpiggy/api/v1/users/{userID}:
+    delete:
+      parameters:
+      - description: User ID
+        in: path
+        name: userID
+        required: true
+        type: string
+      responses:
+        "204":
+          description: No Content
+        "403":
+          description: Forbidden
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Delete user
+      tags:
+      - administration
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: User ID
+        in: path
+        name: userID
+        required: true
+        type: string
+      - description: User access
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/handler.manageUserRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.userResponseBody'
+        "403":
+          description: Forbidden
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Manage user
+      tags:
+      - administration
+  /billpiggy/api/v1/users/me/profile:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.userResponseBody'
+      summary: Get profile
+      tags:
+      - users
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: Profile
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/handler.profileRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.userResponseBody'
+      summary: Update profile
+      tags:
+      - users
   /billpiggy/api/v1/version:
     get:
       produces:
